# pinky

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  audit.py  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a2f8e91c4d53_add_blocked_reason_to_work_items.py  c3b7a1d29f84_add_correlation_key_to_observations.py  d0093dd34b72_initial_schema.py  e7b2c4f19a60_add_resolved_by_to_issues.py  f1a2b3c4d5e6_drop_history_events_table.py  g2a3b4c5d6e7_cleanup_duplicate_investigations.py  h3b4c5d6e7f8_drop_investigation_unique_constraint.py  i4c5d6e7f8g9_add_indexes_fk_constraints.py  j5d6e7f8g9h0_add_outcome_to_executions.py  k6e7f8g9h0i1_add_feature_flags.py  l7f8g9h0i1j2_add_origin_column.py  m8g9h0i1j2k3_add_analytics_indexes.py
apps/api/src/pinky_api/: __init__.py  app.py  audit.py  config.py  events.py  k8s.py  logging_config.py  metrics.py  policy.py  temporal_state.py
apps/api/src/pinky_api/analytics/: __init__.py  metrics.py
apps/api/src/pinky_api/auth/: __init__.py  _state.py  authz.py  deps.py  middleware.py  providers.py  routes.py  session_store.py  sessions.py
apps/api/src/pinky_api/db/: __init__.py  deps.py  engine.py
apps/api/src/pinky_api/fleet/: __init__.py  routes.py
apps/api/src/pinky_api/models/: __init__.py  analytics.py  base.py  execution.py  extensibility.py  feature_flag.py  fleet.py  history.py  issue.py  observation.py  principal.py  session.py  work_item.py
apps/api/src/pinky_api/repositories/: __init__.py  analytics.py  base.py  bindings.py  clusters.py  definitions_repo.py  executions.py  history.py  (+6 more)
apps/api/tests/: conftest.py  test_action_lifecycle.py  test_alerts.py  test_analytics_endpoints.py  test_analytics_metrics.py  test_analytics_trends.py  test_api_tokens.py  test_approval_analytics.py  test_auth.py  test_authz.py  test_authz_enforcement.py  test_base_repository.py  test_binding_token_copy.py  test_chart_builder.py  test_chat_charts.py  test_cluster_bindings_crud.py  test_contracts.py  test_crypto.py  test_csp_report.py  test_definitions_crud.py  test_events.py  test_executions.py  test_feature_flags.py  test_fleet_routes.py  test_health.py  test_history.py  test_integration.py  test_issues.py  test_k8s.py  test_k8s_ssl.py  test_logging_config.py  test_metrics.py  test_oauth_binding.py  test_observations.py  test_observer_binding.py  test_policy_engine_unit.py  test_policy_evaluate.py  test_policy_rules_crud.py  test_remediation_approval_guard.py  test_remediation_start.py  (+14 more)
apps/api/tests/benchmark/: test_api_latency.py
apps/cli/: README.md  pyproject.toml
apps/cli/src/pinky_cli/: __init__.py  main.py
apps/cli/tests/: test_commands.py  test_main.py
apps/worker/: README.md  pyproject.toml
apps/worker/evals/: baselines.json  conftest.py  graders.py  test_graders.py  test_investigation_quality.py  test_redaction_completeness.py  test_remediation_steps.py
apps/worker/evals/expectations/: crashloop-config-error.yaml  image-pull-error.yaml  oom-kill-simple.yaml  rollout-crash.yaml
apps/worker/evals/fixtures/: crashloop-config-error.json  image-pull-error.json  oom-kill-simple.json  rollout-crash.json
apps/worker/src/pinky_worker/: __init__.py  config.py  db.py  events.py  main.py  queues.py  security.py  transitions.py
apps/worker/tests/: test_activities.py  test_apply_change_identity.py  test_approval_lifecycle.py  test_approval_validation.py  test_budget.py  test_budget_enforcement.py  test_cache.py  test_cluster_client.py  test_concurrent_approval.py  test_correlator.py  test_correlator_events.py  test_db_pool.py  test_defensive_guards.py  test_definition_loader.py  test_definition_validation.py  test_event_publishing.py  test_execution_events.py  test_execution_state_machine.py  test_fingerprint.py  test_formatters.py  test_generic_scanner.py  test_investigation_prompt.py  test_k8s_client.py  test_k8s_config.py  test_k8s_ssl.py  test_kind_mapping.py  test_llm_provider.py  test_llm_providers.py  test_no_dead_ends.py  test_observer.py  test_observer_dispatch.py  test_observer_events.py  test_outcome_recording.py  test_policy_engine.py  test_prom_client.py  test_redaction.py  test_scanner_edge_cases.py  test_scanner_parity.py  test_scanner_runner.py  test_security.py  (+8 more)
apps/worker/tests/integration/: conftest.py  test_activities_db.py  test_approval_persistence.py  test_db_correlator.py  test_full_pipeline.py  test_kind_correction_e2e.py  test_no_stuck_states.py  test_real_workflows.py  test_remediation_pipeline.py  test_stage_contracts.py  test_workflows.py
(+489 files in other folders)
